2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_top_left_highlight),
	(clearlooks_gummy_draw_button),
	(clearlooks_gummy_draw_scrollbar_stepper),
	(clearlooks_gummy_draw_scrollbar_slider):	
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Added top-left-hilight and improved scrollbar look

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Little improvements

2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab):
	Less shadings on gradients

2007-08-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Warmer bg color

2007-08-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	Changed prelight on scrollbars

2007-08-19  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Recolorize the scrollbar as it default. I need to work on shadings 
	if we decide to remove the colorization, as I don't like the 
	non-colorized scrollbar. (Classic clearlook's ones looks better, Gummy 
	has a wide range on the pattern, from 0.9 to 1.1, I don't like it non-colorized)

2007-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for the 2.11.6 release.

2007-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap):
	Removed two unused variables.

2007-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_layout):
	Use the correct color when drawing insensitive text.

2007-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap):