@@ -1,5 +1,14 @@
 2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* engines/clearlooks/src/clearlooks_draw_glossy.c:
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_top_left_highlight),
+	(clearlooks_gummy_draw_scrollbar_slider):
+	* engines/clearlooks/src/clearlooks_draw_inverted.c:
+	Updated copyright statements, improved hilight from 0.4 alpha to 0.5
+
+2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* engines/clearlooks/src/clearlooks_draw.c:
 	(clearlooks_draw_scrollbar_slider):
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
